# SILLY-IoT-FARM

./: CMakeLists.txt  README.md  menuconfig.ps1  partitions.csv  sdkconfig.defaults
components/bme280/include/: bme280.h
components/bus/: spi_bus.c
components/bus/include/: i2c_bus.h  spi_bus.h
components/esp_lvgl_port/: .component_hash  esp_lvgl_port.c  idf_component.yml
components/hdc2010/include/: hdc2010.h
components/sensor_hub/: CMakeLists.txt  iot_sensor_hub.c  sensors_event.c
components/sensor_hub/include/: iot_sensor_hub.h  sensor_type.h
components/sensor_hub/include/hal/: humiture_hal.h  imu_hal.h  light_sensor_hal.h
components/usr_cloud/: CMakeLists.txt  usr_cloud_service.cpp  usr_cloud_service.h
components/usr_gui/: CMakeLists.txt  usr_gui.cpp  usr_gui.h
components/usr_gui/lib/: ui.c  ui.h  ui_events.cpp  ui_events.h
components/usr_gui/lib/fonts/: usr_chinese_font.c
components/usr_gui/lib/screens/: data_humid_screen.c  data_temp_screen.c  ui_Screen1.c  ui_Screen2.c
components/usr_light/: CMakeLists.txt  usr_light.cpp  usr_light.h
components/usr_motor/: CMakeLists.txt  usr_motor.cpp  usr_motor.h
components/usr_sensors/: CMakeLists.txt  Kconfig  usr_sensors.cpp  usr_sensors.h
components/veml6040/include/: veml6040.h
components/ws2812/: Kconfig  ws2812_control.c  ws2812_control.h
docs/: 框架.md
main/: main.cpp
